--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -29,7 +29,7 @@
   contents:
     - title: Undergraduate Research Intern
       institution: Laboratory of Imaging Science and Technology (LIST), Seoul National University
-      year: Jun. - Aug. 2022
+      year: Jun - Aug 2022
       description:
         - Advised by professor Jongho Lee
         - Studied detection and correction of motion artifact of magnetic resonance images.
@@ -79,6 +79,20 @@
         - $10000 equivalent
     - year: 2018
       title: Bronze Prize, Korea Olympiads in Informatics
+
+- title: Courses
+  type: time_table
+  contents: 
+    - year: Fall 2021
+      items: 
+        - Creative Engineering Design, Programming Methodology, Linear Algebra for Electrical Systems
+    - year: Spring 2022
+      items:
+        - Signals and Systems, Introduction to Circuit Theory and Laboratory, Computational Linguistics
+    - year: Fall 2022
+      items: 
+        - Digital Logic Design & Lab, Introduction to Electromagnetism with Practice, Mathematical Foundations of Deep Neural Networks
+        - Syntax
 
 # - title: Academic Interests
 #   type: nested_list
