--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,7 +2,7 @@
   type: map
   contents:
     - name: Full Name
-      value: Seojune Lee
+      value: Seojune Lee (이서준)
     # - name: Date of Birth
     #   value: 14th March 1879
     # - name: Languages
