--- a/_config.yml
+++ b/_config.yml
@@ -242,7 +242,7 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
-display_tags: ['deep-learning', 'linguistics', 'engineering', 'math', 'algorithm'] # this tags will be dispalyed on the front page of your blog
+display_tags: ['deep-learning', 'linguistics', 'paper-review', 'math', 'algorithm'] # this tags will be dispalyed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
