--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -28,7 +28,7 @@
   type: time_table
   contents:
     - title: Undergraduate Research Intern
-      institution: <a href="https://list.snu.ac.kr/" style="color:#000000">Laboratory of Imaging Science and Technology (LIST)</a>, Seoul National University
+      institution: Laboratory of Imaging Science and Technology (LIST), Seoul National University
       year: Jun - Aug 2022
       description:
         - Advised by professor Jongho Lee
