--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -2,6 +2,7 @@ github_users:
   - vantaa89
 
 github_repos:
+  - vantaa89/data-structures
   - vantaa89/CED_Project
   - vantaa89/ds-project
   - vantaa89/gp2-mentoring
