--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ future: true
 # -----------------------------------------------------------------------------
 
 # code highlighter theme
-highlight_theme_light: autumn   # https://github.com/jwarby/jekyll-pygments-themes
+highlight_theme_light: github   # https://github.com/jwarby/jekyll-pygments-themes
 highlight_theme_dark: native    # https://github.com/jwarby/jekyll-pygments-themes
 
 # repo color theme
