--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -95,7 +95,7 @@
         - Creative Engineering Design, Programming Methodology, Linear Algebra for Electrical Systems
     - year: 2018-2020
       items: 
-        - CS III(Introduction to CS Theory), Data Structure
+        - CS III(Introduction to CS Theory), Data Structure, CS Seminar(Reinforcement Learning)
         - Introduction to Modern Physics, Mathematical Modelling
 
 - title: Miscellanies    
